Begin getting the Rust bindings to compile

--- a/egui_capi/Cargo.toml
+++ b/egui_capi/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 build = "build/main.rs"
 
 [dependencies]
-
+egui = { version = "0.31.1", default-features = false }
 
 [build-dependencies]
 convert_case = { version = "0.7.1", default-features = false, optional = true }
