--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,11 @@ egui_net_bindgen = { path = "egui_net_bindgen" }
 serde-generate = { path = "serde-generate", default-features = false, features = [ "csharp" ] }
 
 # External dependencies
+bincode = { version = "1.3.3", default-features = false }
 convert_case = { version = "0.7.1", default-features = false }
 csbindgen = { version = "1.9.3", default-features = false }
 egui = { version = "0.31.1", default-features = false, features = [ "serde" ] }
 rustdoc-types = { version = "0.35.0", default-features = false }
+serde = { version = "1.0.219", default-features = false }
 serde_json = { version = "1.0.138", default-features = false, features = [ "std" ] }
 serde-reflection = { version = "0.5.0", default-features = false }
