--- a/Egui/Egui.csproj
+++ b/Egui/Egui.csproj
@@ -15,7 +15,7 @@
 		<CargoFeatures Condition="'$(Configuration)'=='Release'"></CargoFeatures>
 
 		<CargoUnstableOptions Condition="'$(Configuration)'=='Debug'"></CargoUnstableOptions>
-		<CargoUnstableOptions Condition="'$(Configuration)'=='Release'">-Z build-std=panic_abort,std</CargoUnstableOptions>
+		<CargoUnstableOptions Condition="'$(Configuration)'=='Release'"></CargoUnstableOptions>
 
 		<CargoTarget Condition="$([MSBuild]::IsOSPlatform('Windows'))">x86_64-pc-windows-msvc</CargoTarget>
 		<CargoTarget Condition="$([MSBuild]::IsOSPlatform('OSX')) AND $([System.Runtime.InteropServices.RuntimeInformation]::ProcessArchitecture) == 'Arm64'">aarch64-apple-darwin</CargoTarget>
