--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,6 @@ members = [
     "egui_net",
     "egui_net_bindgen",
     "serde-generate",
-    "serde-reflection"
 ]
 default-members = [ "egui_net" ]
 resolver = "2"
@@ -18,13 +17,14 @@ version = "0.1.0"
 egui_net = { path = "egui_net" }
 egui_net_bindgen = { path = "egui_net_bindgen" }
 serde-generate = { path = "serde-generate", default-features = false, features = [ "csharp" ] }
-serde-reflection = { path = "serde-reflection", default-features = false }
 
 # External dependencies
 bincode = { version = "1.3.3", default-features = false }
 convert_case = { version = "0.7.1", default-features = false }
 csbindgen = { version = "1.9.3", default-features = false }
-egui = { version = "0.31.1", default-features = false, features = [ "serde" ] }
-rustdoc-types = { version = "0.35.0", default-features = false }
+#egui = { path = "../egui/crates/egui", default-features = false, features = [ "serde" ] }
+egui = { git = "https://github.com/DouglasDwyer/egui", rev = "c53e605d88abcacaa789a4a5a328229033b76629", default-features = false, features = [ "serde" ] }
+rustdoc-types = { version = "0.39.0", default-features = false }
 serde = { version = "1.0.219", default-features = false, features = [ "derive" ] }
 serde_json = { version = "1.0.138", default-features = false, features = [ "std" ] }
+serde-reflection = { version = "0.5.0", default-features = false }
