--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,8 @@ serde-generate = { path = "serde-generate", default-features = false, features =
 bincode = { version = "1.3.3", default-features = false }
 convert_case = { version = "0.7.1", default-features = false }
 csbindgen = { version = "1.9.3", default-features = false }
-egui = { path = "../egui/crates/egui", default-features = false, features = [ "serde" ] }
-#egui = { git = "https://github.com/DouglasDwyer/egui", rev = "ff251d5513ca44fa9afd3cf3401bde5a282f37d9", default-features = false, features = [ "serde" ] }
+#egui = { path = "../egui/crates/egui", default-features = false, features = [ "serde" ] }
+egui = { git = "https://github.com/DouglasDwyer/egui", rev = "39a5fea3792042c4d9643622a7dca99f669e3b0c", default-features = false, features = [ "serde" ] }
 rustdoc-types = { version = "0.39.0", default-features = false }
 serde = { version = "1.0.219", default-features = false, features = [ "derive" ] }
 serde_json = { version = "1.0.138", default-features = false, features = [ "std" ] }
