Bind more methods on Painter and work on example

--- a/examples/SilkOpenGl/SilkOpenGl.csproj
+++ b/examples/SilkOpenGl/SilkOpenGl.csproj
@@ -6,11 +6,20 @@
 
   <ItemGroup>
     <PackageReference Include="Silk.NET.Input" Version="2.22.0" />
-    <PackageReference Include="Silk.NET.OpenGL" Version="2.22.0" />
+    <PackageReference Include="Silk.NET.OpenGLES" Version="2.22.0" />
     <PackageReference Include="Silk.NET.Windowing" Version="2.22.0" />
+
+
+  <Content Include="*.glsl">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <IncludeInPackage>true</IncludeInPackage>
+    <BuildAction>Content</BuildAction>
+    <CopyToOutput>true</CopyToOutput>
+  </Content>
   </ItemGroup>
 
   <PropertyGroup>
+  	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
