--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,8 @@ serde-generate = { path = "serde-generate", default-features = false, features =
 bincode = { version = "1.3.3", default-features = false }
 convert_case = { version = "0.7.1", default-features = false }
 csbindgen = { version = "1.9.3", default-features = false }
-egui = { path = "../egui/crates/egui", default-features = false, features = [ "serde" ] }
-#egui = { git = "https://github.com/DouglasDwyer/egui", rev = "f9842adb6f1d40fdcd1a07ab9ac2ca04886e1fe8", default-features = false, features = [ "serde" ] }
+#egui = { path = "../egui/crates/egui", default-features = false, features = [ "default_fonts", "serde" ] }
+egui = { git = "https://github.com/DouglasDwyer/egui", rev = "17d4484816339c37b64fbcc72ec6394f4e210087", default-features = false, features = [ "default_fonts", "serde" ] }
 rustdoc-types = { version = "0.39.0", default-features = false }
 serde = { version = "1.0.219", default-features = false, features = [ "derive" ] }
 serde_json = { version = "1.0.138", default-features = false, features = [ "std" ] }
