Add default image loaders

--- a/examples/SilkOpenGl/SilkOpenGl.csproj
+++ b/examples/SilkOpenGl/SilkOpenGl.csproj
@@ -18,6 +18,10 @@
   </Content>
   </ItemGroup>
 
+  <ItemGroup>
+      <EmbeddedResource Include="Resources\**" />
+  </ItemGroup>
+
   <PropertyGroup>
   	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <OutputType>Exe</OutputType>
