--- a/egui_net/Cargo.toml
+++ b/egui_net/Cargo.toml
@@ -9,6 +9,8 @@ crate-type = [ "cdylib" ]
 [dependencies]
 bincode.workspace = true
 egui.workspace = true
+egui_extras.workspace = true
+image.workspace = true
 mimalloc.workspace = true
 serde.workspace = true
 
