--- a/Egui/Egui.csproj
+++ b/Egui/Egui.csproj
@@ -19,12 +19,12 @@
 	<RuntimeIdentifiers Condition="$([MSBuild]::IsOSPlatform('OSX')) AND $([System.Runtime.InteropServices.RuntimeInformation]::ProcessArchitecture) == 'x64'">osx-x64</RuntimeIdentifiers>
 	<RuntimeIdentifiers Condition="$([MSBuild]::IsOSPlatform('Linux')) AND $([System.Runtime.InteropServices.RuntimeInformation]::ProcessArchitecture) == 'Arm64'">linux-arm64</RuntimeIdentifiers>
 	<RuntimeIdentifiers Condition="$([MSBuild]::IsOSPlatform('Linux')) AND $([System.Runtime.InteropServices.RuntimeInformation]::ProcessArchitecture) == 'x64'">linux-x64</RuntimeIdentifiers>
-	<RuntimeIdentifiers Condition="'$(Configuration)'=='Release'">win-arm64;win-x64;osx-arm64;osx-x64;linux-arm64;linux-x64</RuntimeIdentifiers>
+	<!--RuntimeIdentifiers Condition="'$(Configuration)'=='Release'">win-arm64;win-x64;osx-arm64;osx-x64;linux-arm64;linux-x64</RuntimeIdentifiers-->
   </PropertyGroup>
 
 	<PropertyGroup>
 		<CargoExecutable Condition="'$(Configuration)'=='Debug'">cargo</CargoExecutable>
-		<CargoExecutable Condition="'$(Configuration)'=='Release'">cross</CargoExecutable>
+		<CargoExecutable Condition="'$(Configuration)'=='Release'">cargo</CargoExecutable>
 
 		<CargoProfile Condition="'$(Configuration)'=='Debug'">dev</CargoProfile>
 		<CargoProfile Condition="'$(Configuration)'=='Release'">release</CargoProfile>
