--- a/egui_net/Cargo.toml
+++ b/egui_net/Cargo.toml
@@ -8,8 +8,9 @@ crate-type = [ "cdylib" ]
 
 [dependencies]
 bincode.workspace = true
-egui.workspace = true
+egui = { workspace = true, features = [ "default_fonts", "serde" ] }
 egui_extras.workspace = true
+egui_net_ffi.workspace = true
 image.workspace = true
 mimalloc.workspace = true
 serde.workspace = true
