--- a/egui_net_ffi/Cargo.toml
+++ b/egui_net_ffi/Cargo.toml
@@ -4,7 +4,7 @@ edition.workspace = true
 version.workspace = true
 description = "Rust-C# interop for Egui.NET"
 license = "MIT OR Apache-2.0"
-readme = "README.md"
+readme = "../README.md"
 repository = "https://github.com/DouglasDwyer/Egui.NET"
 
 [dependencies]
