--- a/Egui/Egui.csproj
+++ b/Egui/Egui.csproj
@@ -8,6 +8,7 @@
 	<RepositoryUrl>https://github.com/DouglasDwyer/Egui.NET</RepositoryUrl>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
 	<PackageLicenseExpression>MIT OR Apache-2.0</PackageLicenseExpression>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
 
   	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <TargetFramework>net9.0</TargetFramework>
